      newt frontend, this appears as text at the top left-hand corner of the
      screen. This is to be used for top-level operational modes of the
      installer, such as rescue mode.
    - Fix text frontend segfault when encountering empty elements in Choices
      field (closes: #256557).
    - Fix memory leaks in METAGET, PROGRESS, SETTITLE, and X_SETBACKTITLE
      commands.

 -- Colin Watson <cjwatson@debian.org>  Tue, 11 Jan 2005 22:51:59 +0000

cdebconf (0.74) unstable; urgency=low

  * Colin Watson
    - Fix a couple of compiler warnings in the stack driver.
    - Set config_passwd_db path in example cdebconf.conf to passwords.dat
      rather than templates.dat.
    - Attempt to read cdebconf.conf configuration tags with quote-removal
      (strparsecword) and only try without quote-removal (strparsequoteword)
      if that fails. The strange function naming wasn't my idea ... Fixes
      incorrect parsing of stack driver parts of example cdebconf.conf.
    - Initialise next pointers in template/question stacks properly.
    - Implement accept_types and reject_types in stack driver.

 -- Colin Watson <cjwatson@debian.org>  Tue, 11 Jan 2005 18:27:54 +0000

cdebconf (0.73) unstable; urgency=low

  * Colin Watson
    - Set NEWT_FLAG_RETURNEXIT on multiselect checkboxes (closes: #252751).
    - Fix compiler warning in text frontend.
    - gtk frontend work:
      + Set window title on GO.
      + Make cdebconf-gtk-udeb packaging work (still not built by default).
      + Make the Forward button the default widget, so that pressing Enter
        activates it.
    - Make the value of DEBCONF_OLD_FD_BASE available via the shell
      confmodule.
  * Updated translations:
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Finnish (fi.po) by Tapio Lehtonen
    - Hebrew (he.po) by Lior Kaplan
    - Hungarian (hu.po) by VEROK Istvan
    - Romanian (ro.po) by Eddy Petrisor
    - Russian (ru.po) by Russian L10N Team
