@@ -9,6 +9,8 @@ cdebconf (0.75) UNRELEASED; urgency=low
       field (closes: #256557).
     - Fix memory leaks in METAGET, PROGRESS, SETTITLE, and X_SETBACKTITLE
       commands.
+    - Make the text frontend output a blank line before the first title in
+      go() if it was already displaying a progress bar (closes: #271707).
 
  -- Colin Watson <cjwatson@debian.org>  Tue, 11 Jan 2005 22:51:59 +0000
 
